# cis_client-rust

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: auth.rs  batch.rs  client.rs  encoding.rs  error.rs  getby.rs  lib.rs  secrets.rs  settings.rs
src/sync/: batch.rs  client.rs  mod.rs
