[package]
name = "cis_client"
version = "0.7.2"
authors = ["Florian Merz <me@fiji-flo.de>"]
edition = "2018"

[features]
default = []
sync = ["reqwest/blocking", "tokio"]

[dependencies]
shared-expiry-get = "0.1"
cis_profile = { git = "https://github.com/mozilla-iam/cis_profile-rust", version = "0.4.5", tag = "0.4.5", features = ["aws", "vendored", "well_known"] }
reqwest =  { version = "0.10", features = ["json"] }
biscuit = "0.4"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.32"
percent-encoding = "2.1"
failure = "0.1"
failure_derive = "0.1"
futures = "0.3"
log = "0.4"
tokio = { optional = true, version = "0.2" }

[dev-dependencies]
tokio = "0.2"
